@@ -6,6 +6,7 @@
 
 from __future__ import annotations
 
+import warnings
 from collections import namedtuple
 from tokenize import TokenInfo
 from typing import TYPE_CHECKING
@@ -52,7 +53,9 @@ class Interface:
 
     @classmethod
     def is_implemented_by(cls, instance):
-        return implements(instance, cls)
+        with warnings.catch_warnings():
+            warnings.filterwarnings("ignore", category=DeprecationWarning)
+            return implements(instance, cls)
 
 
 def implements(
@@ -60,6 +63,12 @@ def implements(
     interface: type[Interface] | tuple[type[Interface], ...],
 ) -> bool:
     """Does the given object (maybe an instance or class) implement the interface."""
+    # TODO: 3.0: Remove deprecated function # pylint: disable=fixme
+    warnings.warn(
+        "implements has been deprecated in favour of using basic "
+        "inheritance patterns without using __implements__.",
+        DeprecationWarning,
+    )
     implements_ = getattr(obj, "__implements__", ())
     if not isinstance(implements_, (list, tuple)):
         implements_ = (implements_,)
